--- a/src/Using the code.ipynb
+++ b/src/Using the code.ipynb
@@ -13,9 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,8 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 266 ms, sys: 15.9 ms, total: 282 ms\n",
-      "Wall time: 281 ms\n"
+      "CPU times: user 278 ms, sys: 27.6 ms, total: 305 ms\n",
+      "Wall time: 3.22 s\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 496 ms, sys: 0 ns, total: 496 ms\n",
-      "Wall time: 493 ms\n"
+      "CPU times: user 468 ms, sys: 0 ns, total: 468 ms\n",
+      "Wall time: 471 ms\n"
      ]
     }
    ],
@@ -89,6 +89,17 @@
      ]
     }
    ],
+   "source": [
+    "%time df = read_in.reading_in_data(parameters_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "%time df = read_in.reading_in_data(parameters_df)"
    ]
@@ -148,9 +159,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:axlml]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-axlml-py"
   },
   "language_info": {
    "codemirror_mode": {
