Data frame to list.

--- a/src/Using the code.ipynb
+++ b/src/Using the code.ipynb
@@ -90,6 +90,26 @@
     }
    ],
    "source": [
+    "# old %time df = read_in.reading_in_data(parameters_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 41min 24s, sys: 8min 57s, total: 50min 22s\n",
+      "Wall time: 53min 29s\n"
+     ]
+    }
+   ],
+   "source": [
     "%time df = read_in.reading_in_data(parameters_df)"
    ]
   },
@@ -101,7 +121,7 @@
    },
    "outputs": [],
    "source": [
-    "%time df = read_in.reading_in_data(parameters_df)"
+    "df = pd.concat(df)"
    ]
   },
   {
