Initial Analysis notebook
A notebook was created with some simple plots for the data frame.

Correct test read in

In previous commit instead of a data frame we are now returning a list.
Test had to be adjust as well.

--- a/src/Using the code.ipynb
+++ b/src/Using the code.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,33 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import read_in"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 278 ms, sys: 27.6 ms, total: 305 ms\n",
-      "Wall time: 3.22 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time parameters_df = read_in.parameters_data_frame()"
    ]
   },
   {
@@ -64,33 +44,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 468 ms, sys: 0 ns, total: 468 ms\n",
-      "Wall time: 471 ms\n"
+      "CPU times: user 237 ms, sys: 4.13 ms, total: 241 ms\n",
+      "Wall time: 241 ms\n"
      ]
     }
    ],
    "source": [
-    "%time strategies_df = read_in.strategies_properties()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 38min 49s, sys: 6min 57s, total: 45min 46s\n",
-      "Wall time: 45min 57s\n"
-     ]
-    }
-   ],
-   "source": [
-    "# old %time df = read_in.reading_in_data(parameters_df)"
+    "%time parameters_df = read_in.parameters_data_frame()"
    ]
   },
   {
@@ -104,8 +64,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41min 24s, sys: 8min 57s, total: 50min 22s\n",
-      "Wall time: 53min 29s\n"
+      "CPU times: user 426 ms, sys: 3.93 ms, total: 430 ms\n",
+      "Wall time: 428 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time strategies_df = read_in.strategies_properties()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# old %time df = read_in.reading_in_data(parameters_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 50s, sys: 802 ms, total: 1min 51s\n",
+      "Wall time: 1min 51s\n"
      ]
     }
    ],
@@ -115,18 +106,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = pd.concat(df)"
+    "temp = [pd.concat(dfs) for dfs in df]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_frame = pd.concat(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3005873"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -135,18 +159,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 858 ms, sys: 83.7 ms, total: 941 ms\n",
-      "Wall time: 941 ms\n"
+      "CPU times: user 1.1 s, sys: 59.9 ms, total: 1.16 s\n",
+      "Wall time: 1.17 s\n"
      ]
     }
    ],
    "source": [
-    "%time data_frame = pd.merge(df, strategies_df, on='Name')"
+    "%time data_frame = pd.merge(data_frame, strategies_df, on='Name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -157,13 +181,24 @@
        "2550344"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(data_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_frame.to_csv('data_frame.csv')"
    ]
   },
   {
