--- a/src/Using the code.ipynb
+++ b/src/Using the code.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the code\n",
+    "--------------\n",
+    "\n",
+    "In the following notebook we create our data set. \n",
+    "\n",
+    "1. The parameters data set is created\n",
+    "2. For each row retrieve the corresponding data sets (noise, probend, standard etc)\n",
+    "3. Get a data set with all the strategies of the axelrod python library\n",
+    "4. Merge them together\n",
+    "5. Write to file\n",
+    "\n",
+    "The following could have been implemented in the script but it was done here so we could time the process. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,7 +26,9 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import axelrod\n",
+    "import read_in"
    ]
   },
   {
@@ -17,20 +37,40 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.14.0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import axelrod"
+    "axelrod.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 224 ms, sys: 12 ms, total: 236 ms\n",
+      "Wall time: 237 ms\n"
+     ]
+    }
+   ],
    "source": [
-    "import read_in"
+    "%time parameters_df = read_in.parameters_data_frame()"
    ]
   },
   {
@@ -44,13 +84,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 237 ms, sys: 4.13 ms, total: 241 ms\n",
-      "Wall time: 241 ms\n"
+      "CPU times: user 448 ms, sys: 8 ms, total: 456 ms\n",
+      "Wall time: 451 ms\n"
      ]
     }
    ],
    "source": [
-    "%time parameters_df = read_in.parameters_data_frame()"
+    "%time strategies_df = read_in.strategies_properties()"
    ]
   },
   {
@@ -64,13 +104,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 426 ms, sys: 3.93 ms, total: 430 ms\n",
-      "Wall time: 428 ms\n"
+      "CPU times: user 2min 34s, sys: 5.51 s, total: 2min 39s\n",
+      "Wall time: 2min 47s\n"
      ]
     }
    ],
    "source": [
-    "%time strategies_df = read_in.strategies_properties()"
+    "%time df = read_in.reading_in_data(parameters_df)"
    ]
   },
   {
@@ -81,12 +121,12 @@
    },
    "outputs": [],
    "source": [
-    "# old %time df = read_in.reading_in_data(parameters_df)"
+    "df.to_csv('df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -95,40 +135,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 50s, sys: 802 ms, total: 1min 51s\n",
-      "Wall time: 1min 51s\n"
+      "CPU times: user 1.16 s, sys: 1.46 s, total: 2.62 s\n",
+      "Wall time: 2.64 s\n"
      ]
     }
    ],
    "source": [
-    "%time df = read_in.reading_in_data(parameters_df)"
+    "%time data_frame = pd.merge(strategies_df,  df, on='Name')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "temp = [pd.concat(dfs) for dfs in df]"
+    "The length here differs because of the Names of the strategies. The yml file should have the version of axelrod for which we run the tournament. But this seems to not be the case.\n",
+    "**Discuss this.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data_frame = pd.concat(temp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -136,63 +162,21 @@
     {
      "data": {
       "text/plain": [
-       "3005873"
+       "(3005873, 2550344)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(data_frame)"
+    "len(df), len(data_frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.1 s, sys: 59.9 ms, total: 1.16 s\n",
-      "Wall time: 1.17 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time data_frame = pd.merge(data_frame, strategies_df, on='Name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2550344"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data_frame)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
