Analysis using the new data.
A.0.0. The initial analysis contains plots for measures of the entire
data set. This was done to investigate if anything stands out.
The enviroments still look cooperative.

A.1. Is the analysis at the tournament level of different types.
Now we are ploting the transitions to C.

Everything is still in primary stage.

Last notebook contains the note to myself for
getting back.

The notes.tex contains some notes for the variables.

--- a/src/Using the code.ipynb
+++ b/src/Using the code.ipynb
@@ -34,14 +34,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.14.0'"
+       "'3.7.0'"
       ]
      },
      "execution_count": 2,
@@ -57,35 +55,42 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "directory = \"/home/nightwing/data/Thousand_tournaments/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 224 ms, sys: 12 ms, total: 236 ms\n",
-      "Wall time: 237 ms\n"
+      "CPU times: user 884 ms, sys: 72 ms, total: 956 ms\n",
+      "Wall time: 1.02 s\n"
      ]
     }
    ],
    "source": [
-    "%time parameters_df = read_in.parameters_data_frame()"
+    "%time parameters_df = read_in.parameters_data_frame(directory)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 448 ms, sys: 8 ms, total: 456 ms\n",
-      "Wall time: 451 ms\n"
+      "CPU times: user 2.84 s, sys: 12 ms, total: 2.85 s\n",
+      "Wall time: 2.84 s\n"
      ]
     }
    ],
@@ -95,48 +100,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 34s, sys: 5.51 s, total: 2min 39s\n",
-      "Wall time: 2min 47s\n"
+      "CPU times: user 3min 43s, sys: 10.8 s, total: 3min 54s\n",
+      "Wall time: 4min 9s\n"
      ]
     }
    ],
    "source": [
-    "%time df = read_in.reading_in_data(parameters_df)"
+    "%time df = read_in.reading_in_data(parameters_df, directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df.to_csv('df.csv')"
+    "df = df[~df.Name.str.contains('Slow Tit For Two Tats')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_csv('df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for strategy_name in strategies_df['Name'].unique():\n",
+    "#     for param_name in strategies_with_parameters:\n",
+    "#         if strategy_name in param_name:\n",
+    "#             strategies_df = strategies_df.append(\n",
+    "#                 strategies_df[strategies_df['Name']==strategy_name].replace(to_replace=strategy_name, value=param_name)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# strategies_df = strategies_df[strategies_df['Name'].isin(df['Name'].unique())].drop_duplicates('Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.16 s, sys: 1.46 s, total: 2.62 s\n",
-      "Wall time: 2.64 s\n"
+      "CPU times: user 1.76 s, sys: 736 ms, total: 2.5 s\n",
+      "Wall time: 2.69 s\n"
      ]
     }
    ],
@@ -154,18 +199,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_frame.to_csv('../data/data_frame.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3005873, 2550344)"
+       "(3457082, 3439164)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,26 +225,6 @@
    "source": [
     "len(df), len(data_frame)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "data_frame.to_csv('data_frame.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
