--- a/src/A.0.0. Seperating tournament types.ipynb
+++ b/src/A.0.0. Seperating tournament types.ipynb
@@ -34,18 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/nightwing/rsc/axlml/src/data/df.csv')"
+    "df = pd.read_csv('../data/main.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -89,16 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for df, name in [[standar_tournaments, 'standar'], [noisy_tournaments, 'noise'],\n",
     "                 [probend_tournaments, 'probend'], [noisy_probend_tournaments, 'noisy probend']]:\n",
     "\n",
-    "    df['Normalized_Rank'] = df.apply(lambda row: row['Rank'] / row['size'], axis=1)\n",
+    "    df['Normalized_Rank'] = df.apply(lambda row: row['Rank'] / (row['size'] - 1), axis=1)\n",
     "    \n",
     "    max_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].max()\n",
     "    min_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].min()\n",
@@ -106,8 +104,8 @@
     "    median_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].median()\n",
     "    std = df.groupby(['seed'], sort=False)['Cooperation_rating'].std()\n",
     "    \n",
-    "    coop_w = df[df['Rank'] == 0].reset_index()['Cooperation_rating']\n",
-    "    coop_l = df.loc[df.groupby(['seed'], sort=False)['Rank'].idxmax()].reset_index()['Cooperation_rating']\n",
+    "    coop_w = df[df['Normalized_Rank'] == 0].reset_index()['Cooperation_rating']\n",
+    "    coop_l = df.loc[df.groupby(['seed'], sort=False)['Normalized_Rank'].idxmax()].reset_index()['Cooperation_rating']\n",
     "    \n",
     "    norm_rank_c = df.loc[df.groupby(['seed'], sort=False)['Cooperation_rating'].idxmax()].reset_index()['Normalized_Rank']\n",
     "    norm_rank_d = df.loc[df.groupby(['seed'], sort=False)['Cooperation_rating'].idxmin()].reset_index()['Normalized_Rank']\n",
@@ -117,11 +115,52 @@
     "    \n",
     "    size = df.groupby(['seed'])['size'].max()\n",
     "    \n",
-    "    df = pd.DataFrame({'norm rank C': norm_rank_c, 'norm rank D': norm_rank_d, \n",
-    "                       'winner coop': coop_w, 'loser coop': coop_l, 'max coop': max_coop, 'min coop': min_coop,\n",
-    "                       'mean coop': mean_coop, 'median coop': median_coop, 'size': size,\n",
-    "                       'std': std}).reset_index()\n",
+    "    df = pd.DataFrame({'norm rank C': norm_rank_c.values, 'norm rank D': norm_rank_d.values, \n",
+    "                       'winner coop': coop_w.values, 'loser coop': coop_l.values,\n",
+    "                       'max coop': max_coop.values, 'min coop': min_coop.values,\n",
+    "                       'mean coop': mean_coop.values, 'median coop': median_coop.values,\n",
+    "                       'size': size.values, 'std': std.values}).reset_index()\n",
     "    df.to_csv('data/{}_tournaments.csv'.format(name), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = pd.read_csv('data/noisy probend_tournaments.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index          False\n",
+       "loser coop     False\n",
+       "max coop       False\n",
+       "mean coop      False\n",
+       "median coop    False\n",
+       "min coop       False\n",
+       "norm rank C    False\n",
+       "norm rank D    False\n",
+       "size           False\n",
+       "std            False\n",
+       "winner coop    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.isnull().any()"
    ]
   },
   {
