re-run analysis with new data

--- a/src/A.0.0. Seperating tournament types.ipynb
+++ b/src/A.0.0. Seperating tournament types.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -122,6 +122,48 @@
     "                       'mean coop': mean_coop, 'median coop': median_coop, 'size': size,\n",
     "                       'std': std}).reset_index()\n",
     "    df.to_csv('data/{}_tournaments.csv'.format(name), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "frame = pd.read_csv('data/noise_tournaments.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index          False\n",
+       "loser coop     False\n",
+       "max coop       False\n",
+       "mean coop      False\n",
+       "median coop    False\n",
+       "min coop       False\n",
+       "norm rank C    False\n",
+       "norm rank D    False\n",
+       "size           False\n",
+       "std            False\n",
+       "winner coop    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame.isnull().any()"
    ]
   },
   {
