--- a/src/A.0.0. Seperating tournament types.ipynb
+++ b/src/A.0.0. Seperating tournament types.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -35,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/main.csv')"
@@ -46,53 +42,56 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "standar_tournaments = df[(df['noise'].isnull()) & (df['probend'].isnull())]"
+    "standar_tournaments = df[(df['noise'].isnull()) & (df['probend'].isnull())]\n",
+    "standar_tournaments.to_csv('data/raw_std.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "noisy_tournaments = df[(~df['noise'].isnull()) & (df['probend'].isnull())]"
+    "noisy_tournaments = df[(~df['noise'].isnull()) & (df['probend'].isnull())]\n",
+    "noisy_tournaments.to_csv('data/raw_noise.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "probend_tournaments = df[(df['noise'].isnull()) & (df['turns'].isnull())]"
+    "probend_tournaments = df[(df['noise'].isnull()) & (df['turns'].isnull())]\n",
+    "probend_tournaments.to_csv('data/raw_probend.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "noisy_probend_tournaments = df[(~df['noise'].isnull()) & (df['turns'].isnull())]"
+    "noisy_probend_tournaments = df[(~df['noise'].isnull()) & (df['turns'].isnull())]\n",
+    "noisy_probend_tournaments.to_csv('data/raw_noise_probend.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# noisy_tournaments[noisy_tournaments['Rank'] == 0].reset_index()['CC_to_C_rate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for df, name in [[standar_tournaments, 'standar'], [noisy_tournaments, 'noise'],\n",
@@ -100,12 +99,14 @@
     "\n",
     "    df['Normalized_Rank'] = df.apply(lambda row: row['Rank'] / (row['size'] - 1), axis=1)\n",
     "    \n",
+    "    # descriptives\n",
     "    max_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].max()\n",
     "    min_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].min()\n",
     "    mean_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].mean()\n",
     "    median_coop = df.groupby(['seed'], sort=False)['Cooperation_rating'].median()\n",
     "    std = df.groupby(['seed'], sort=False)['Cooperation_rating'].std()\n",
     "    \n",
+    "    # win-lose\n",
     "    coop_w = df[df['Normalized_Rank'] == 0].reset_index()['Cooperation_rating']\n",
     "    coop_l = df.loc[df.groupby(['seed'], sort=False)['Normalized_Rank'].idxmax()].reset_index()['Cooperation_rating']\n",
     "    \n",
@@ -115,22 +116,27 @@
     "    norm_rank_c = norm_rank_c\n",
     "    norm_rank_d = norm_rank_d\n",
     "    \n",
+    "    # rates\n",
+    "    cc_to_c = df[df['Normalized_Rank'] == 0].reset_index()['CC_to_C_rate']\n",
+    "    cd_to_c = df[df['Normalized_Rank'] == 0].reset_index()['CD_to_C_rate']\n",
+    "    dc_to_c = df[df['Normalized_Rank'] == 0].reset_index()['DC_to_C_rate']\n",
+    "    dd_to_c = df[df['Normalized_Rank'] == 0].reset_index()['DD_to_C_rate']\n",
+    "    \n",
     "    size = df.groupby(['seed'])['size'].max()\n",
     "    \n",
     "    df = pd.DataFrame({'norm rank C': norm_rank_c.values, 'norm rank D': norm_rank_d.values, \n",
     "                       'winner coop': coop_w.values, 'loser coop': coop_l.values,\n",
     "                       'max coop': max_coop.values, 'min coop': min_coop.values,\n",
     "                       'mean coop': mean_coop.values, 'median coop': median_coop.values,\n",
-    "                       'size': size.values, 'std': std.values}).reset_index()\n",
+    "                       'size': size.values, 'std': std.values, 'cc_to_c': cc_to_c,\n",
+    "                       'cd_to_c': cd_to_c, 'dc_to_c': dc_to_c, 'dd_to_c': dd_to_c}).reset_index()\n",
     "    df.to_csv('data/{}_tournaments.csv'.format(name), index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "frame = pd.read_csv('data/noise_tournaments.csv')"
@@ -138,13 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "index          False\n",
+       "cc_to_c        False\n",
+       "cd_to_c        False\n",
+       "dc_to_c        False\n",
+       "dd_to_c        False\n",
        "loser coop     False\n",
        "max coop       False\n",
        "mean coop      False\n",
@@ -158,7 +168,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,9 +190,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:axlml]",
+   "display_name": "axlml",
    "language": "python",
-   "name": "conda-env-axlml-py"
+   "name": "axlml"
   },
   "language_info": {
    "codemirror_mode": {
